fix(filtres) : 0007854: Mettre un marqueur plus visible pour l'activation des filtres

--- a/skins/mel_elastic/styles/less/style.less
+++ b/skins/mel_elastic/styles/less/style.less
@@ -5633,3 +5633,7 @@ bnum-separate{
         display:block;
     }
 }
+
+tr.disabled {
+  background-color: var(--disabled-background-color) !important;
+}
