--- a/skins/mel_elastic/themes/main/style/less/colors.less
+++ b/skins/mel_elastic/themes/main/style/less/colors.less
@@ -10,6 +10,7 @@
   --active-button-background-color: var(--main-bckg-color);
   --body-background-color: var(--default-bckg-color);
   --background-color-dialog-message: rgba(255,255,102,0.25);
+  --disabled-background-color:#828282;
 
   //Main text colors
   --main-text-color: #363A5B;
